# actorpatterndemo

./: .gitignore  README.md  build.sbt
parallel/: .gitignore  CMakeLists.txt  Distributed  hosts  install.sh  main.cpp
parallel/Receiver/: CMakeLists.txt  Receiver  main.cpp
parallel/Sender/: CMakeLists.txt  Sender  main.cpp
project/: plugins.sbt
src/examples/resources/: factorial.conf  stats1.conf  stats2.conf
src/main/protobuf/: models.proto
src/main/resources/: application.conf
src/main/scala/cluster/: ClusterApp.scala  ClusterBackend.scala  ClusterMessages.scala  HttpRouter.scala  Master.scala  MessageSimulator.scala  Messages.scala  State.scala
src/main/scala/cluster/http/: HttpRouter.scala  HttpService.scala  WorkersExchange.scala  WorkersExchangeHandler.scala
src/main/scala/cluster/simple/: SimpleClusterApp.scala  SimpleClusterListener.scala  SimpleClusterListener2.scala
src/main/scala/cluster/websocket/: MessagePublisher.scala  (+9 more)
src/multi-jvm/resources/: application.conf
src/multi-jvm/scala/cluster/: ClusterSpec.scala  MultiClusterSpec.scala  STMultiNodeSpec.scala
src/test/: ClusterBackendSpec.scala  ClusterSpec.scala
src/test/cluster/: ClusterBackendSpec.scala  HttpRouterSpec.scala  MasterSpec.scala  MessageSimulatorSpec.scala
src/test/cluster/http/: HttpRouterSpec.scala  HttpServiceSpec.scala  WorkersExchangeHandlerSpec.scala  WorkersExchangeSpec.scala
src/test/cluster/websocket/: HttpMicroserviceSpec.scala  MessagePublisherSpec.scala  MoveWorkersPublisherSpec.scala  SetWorkersDeserializerProxySpec.scala  StringPublisherSpec.scala  WSFlowSpec.scala  WSMessagePublisherSpec.scala  WebSocketFlowSpec.scala
(+23 files in other folders)
