cmake_minimum_required(VERSION 3.5)

PROJECT(Parallel)

FIND_PACKAGE(MPI REQUIRED)
FIND_PACKAGE(Boost COMPONENTS mpi REQUIRED)
set(Boost_USE_STATIC_LIBS ON)

IF (Boost_FOUND AND MPI_C_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(SYSTEM ${MPI_INCLUDE_PATH})

    LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

    ADD_DEFINITIONS( "-DHAS_BOOST" )

    ADD_EXECUTABLE(Distributed main.cpp)
    TARGET_LINK_LIBRARIES(Distributed ${Boost_LIBRARIES} ${MPI_LIBRARIES})
ENDIF()

ADD_SUBDIRECTORY(Sender)
ADD_SUBDIRECTORY(Receiver)
