cmake_minimum_required(VERSION 3.5)

PROJECT(Receiver)

FIND_PACKAGE(MPI REQUIRED)
FIND_PACKAGE(Boost COMPONENTS mpi REQUIRED)

IF (Boost_FOUND AND MPI_C_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(SYSTEM ${MPI_INCLUDE_PATH})

    LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

    ADD_DEFINITIONS( "-DHAS_BOOST" )

    ADD_EXECUTABLE(Receiver main.cpp)
    TARGET_LINK_LIBRARIES(Receiver ${Boost_LIBRARIES} ${MPI_LIBRARIES})
ENDIF()
